2001-04-17  Bill Gribble  <grib@billgribble.com>

	* fixes to MDI bugs: only one param editor for accounts and 
	reports, make sure reports reference and created children

	* new report: 'Frame URL'.  Give it an URL and it will display the
	contents in an <iframe>... handly for putting that stock ticker
	graph from yahoo or wherever in a sidebar of a multicolumn view.

2001-04-17  Dave Peticolas  <dave@krondo.com>

	* lots of files: handle NULL pointer printf problems,
	fix some mem leaks

2001-04-16  Dave Peticolas  <dave@krondo.com>

	* src/gnc-ui-util.c (gnc_account_get_balance_in_currency): new func

	* src/gnome/dialog-price-editor.c: button for online quotes

	* src/scm/price-quotes.scm: handle missing lib errors. i18n
	some strings

	* src/quotes/finance-quote-helper.in: return error symbol when
	libraries are missing.

	* src/guile/guile-util.c (gnc_book_to_scm): new func

2001-04-15  Dave Peticolas  <dave@krondo.com>

	* src/register/gnome/gnucash-sheet.c: some more error checking

	* src/gnome/top-level.c: check for no children when creating default
	window

	* src/gnome/window-main.c: Kevin Finn's patch to shutdown gnucash
	when the main window is deleted. Handle remove_child events to
	prevent accessing deleted windows.

	* src/engine/sixtp-dom-parsers.c (string_to_integer): same as
	below

	* src/engine/sixtp-dom-generators.c (add_kvp_value_node): same as
	below

	* src/engine/sixtp-xml-write-utils.c: same as below

	* src/engine/sixtp-utils.c: same as below

	* src/engine/gnc-numeric.c: same as below

	* src/engine/TransLog.c: same as below

	* src/engine/kvp_frame.c: same as below

	* src/engine/sql/kvp-sql.c: same as below

	* src/engine/sql/builder.c (sqlBuild_Set_Int64): don't assume
	long long int == gint64

	* src/gnome/window-main.c: take out devel menu

	* src/gnome/dialog-price-editor.c (price_ok_clicked): fix bug

2001-04-15  Christian Stimming  <stimming@tuhh.de>

	* src/scm/report.scm: Defined global identifiers for some option
	names.
